# SingularEngine

./: CMakeLists.txt  LICENSE  README.md
SEditor/: CMakeLists.txt  Editor.cpp  SEditor.cpp
SEditor/SEditorComponent/: CameraComponentEditor.cpp  CameraComponentEditor.h  LightComponentEditor.cpp  LightComponentEditor.h  MeshRenderComponentEditor.cpp  MeshRenderComponentEditor.h  TransformComponentEditor.cpp  TransformComponentEditor.h
SEditor/SEditorPanels/: GamePanel.cpp  GamePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  PanelBase.h
SEditor/SEditorWindows/: WindowsEditor.cpp  WindowsEditor.h
SEditor/Windows/: WindowsEditor.cpp
SEngine/: CMakeLists.txt
SEngine/Core/Interface/: IComponent.h  IModule.h
SEngine/Core/Logging/: Logger.cpp  Logger.h
SEngine/Core/Math/: MathPCH.h  SEMathCommon.h  SEMatrix.h  SEQuaternion.h  SEVector.h
SEngine/Core/Utilities/: FileLoader.cpp  FileLoader.h
SEngine/Functional/Application/: Application.cpp  Application.h
SEngine/Functional/Application/Windows/: WindowsApplication.cpp  WindowsApplication.h
SEngine/Functional/GUI/: GUIManager.cpp  GUIManager.h
SEngine/Functional/GameObject/: GameObject.cpp  GameObject.h
SEngine/Functional/GameObject/Components/: Component.h
SEngine/Functional/RHI/: ConstantBuffer.cpp  ConstantBuffer.h  DepthStencilState.cpp  DepthStencilState.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RasterizationState.cpp  RasterizationState.h  RenderBuffer.cpp  RenderBuffer.h  RenderContext.cpp  RenderContext.h  RenderItem.cpp  RenderItem.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
SEngine/Functional/RHI/D3D11/: ConstantBufferD3D11.cpp  ConstantBufferD3D11.h  DepthStencilStateD3D11.cpp  MeshD3D11.cpp  (+22 more)
SEngine/Functional/Scene/: GizmoCreator.cpp  GizmoCreator.h  SceneManager.cpp  SceneManager.h
SEngine/Platform/: Assert.h  BuildType.h  Platform.h
SEngine/Resource/AssetManager/: AssetLoader.cpp  AssetLoader.h
SRuntime/: CMakeLists.txt  SingularEngine.cpp
SRuntime/Windows/: WindowsRuntime.cpp  WindowsRuntime.h
(+34 files in other folders)
